JMeter性能测试: 5场景全部达标, 30000请求 0%错误, P95=348ms, 687req/s. 移除MyBatis SQL日志, HikariCP扩容至30, Sentinel QPS调至5000, 禁用Nacos远端配置, Gateway连接池扩建.